selling button and card

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,13 @@
+body {
+  font-family: 'Roboto', Helvetica;
+  font-weight: 200;
+}
+h1 {
+  font-weight: 100;
+}
+.card {
+  min-height: 250px;
+}
 .op-btn {
   background-color: #ccc;
   width: 30px;
