--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -28,12 +28,19 @@
     <input id="product-other-attributes" type="text" name='product[other_attributes]'/>
     <br/>
     <input type="submit" class="btn main-btn" />
+    <div class="btn main-btn back">Product list</div>
   </form>
 
   <!-- SHOW action -->
-  <div id="show-product" class="col s8">
+  <div id="show-product" class="row col s8 m8">
     <div class="btn main-btn back">Product list</div>
+
   </div>
+  <!-- BUY action -->
+  <div id="buy-product" class="col s4">
+
+  </div>
+
 
   <!-- INDEX action -->
   <div class="product-list">
